--- a/components/MVV/styles.module.css
+++ b/components/MVV/styles.module.css
@@ -1,5 +1,7 @@
 .container{
     width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .optionsContainer{
@@ -7,25 +9,28 @@
     background-color: red;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 30px;
 }
 
 .option{
-    background-color: white;
+    background-color: #428299;
     height: 270px;
     width: 250px;
     cursor: pointer;
     font-weight: 600;
-    font-size: clamp(1.2rem, 2.2vw, 1.7rem);
+    font-size: clamp(1.3rem, 2.5vw, 1.9rem);
     position: relative;
-    border: 1px solid rgba(0,0,0)
+    border: 1px solid #428299;
+    color: white;
+    padding: 0 40px;
+    line-height: 1.3;
 }
 
 .option::after{
     content: "";
     background-color: #74A9C0;
-    width: 250px;
+    width: calc(100% + 2px);
     height: 30px;
     position: absolute;
     bottom: -31px;
@@ -33,11 +38,110 @@
     transition: ease 0.5s all;
 }
 
-.option:hover::after{
+.option:hover::after,
+.option.selected::after
+{
     width: 100px;
+}
+
+.option.selected{
+    background-color: white;
+    color: #74A9C0;
+    border: 1px solid black;
+    box-shadow: 0px 5px 2px rgba(0,0,0,0.3);
 }
 
 .mvvContainer{
     height: 600px;
+    padding: 30px 0 0 0;
     background-color: blue;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.indicator{
+    background-image:
+    linear-gradient(to bottom right, transparent 50%, #4C9ABB 0),
+    linear-gradient(to top right, #4C9ABB 50%, transparent 0);
+    background-size: 50% 100%;
+    background-repeat: no-repeat;
+    background-position: left, right;
+    font-size: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0 12px 0 0;
+    box-sizing: border-box;
+    height: 80px;
+    width: 80px;
+    position: absolute;
+    top: 10px;
+    transition: ease 0.5s all;
+    transform: translate(0);
+    color: #428299;
+}
+
+.indicator.missao{
+    transform: translate(-200px);
+}
+
+.mvvContainer.regras{
+    right: 9%;
+}
+
+.mvv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 460px;
+    background-color: #4C9ABB;
+    width: 100%;
+    padding: 30px 0;
+    box-sizing: border-box;
+    color: white;
+}
+
+.mvv > .title{
+    width: 30%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    text-align: center;
+    border-right: 1px solid white;
+}
+
+.mvv .content{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 40px;
+    box-sizing: border-box;
+}
+
+
+
+@media (max-width: 600px){
+    .optionsContainer{
+        height: 430px;
+        padding: 30px 0 60px 0;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .option{
+        height: 80px;
+        width: 280px;
+    }
+
+    .option::after{
+        height: 15px;
+        bottom: -16px;
+    }
 }
