--- a/components/Contatos/contato.module.css
+++ b/components/Contatos/contato.module.css
@@ -1,4 +1,6 @@
-.container {
+
+
+ .container {
   min-height: 60vh;
   background-color: #DDDDDD;
   display: flex;
@@ -17,9 +19,10 @@
     color: #3f819d;
     margin: 0% 0.5vw 0% -10%;
     text-shadow: 0px 2px 10px #4C9ABB;
+  
 }
-
 .contact_text{
+  
     width: 40%;
     height: auto;
     padding: 0% 0% 0% 4%;
@@ -31,6 +34,8 @@
     color: #A83C3C;
 }
 .h3{
+    /* width:  80%; */
+    margin-top: -3%;
     padding-top: 0.2em;
     font-size: 1.5em;
     color: #000000;
@@ -41,76 +46,30 @@
     text-align: justify;
 }
 
+/* .imgArrow{
+  
+    color: black;
+    width: 16px;
+    height: 16px;     
+  
+} */
 .contact_forms{
   
-
-    width: 50%;   
+    width: 50%;
+    /* margin-top: 0.8em;   */
+   
+   
 }
-.form{
-    line-height:3;
-    width: 100%;
-    height: 70%;
-}
-.input{
-    width: 39.5%;
-    height: auto;
-    border-radius: 10px;
-    padding: 10px;
-    border: 1px solid transparent;
-    background-color: #e282975b;
-    margin-right: 1%;
-    box-shadow: 2px 2px #88888841;
-
-}
-.assunto{
-    width: 80%;
-    height: auto;
-    border-radius: 10px;
-    padding: 10px;
-    border: 1px solid transparent;
-    background-color: #e282975b;
-    box-shadow: 2px 2px #88888841;
-}
-
-.textarea{
-    border-radius: 10px;
-    padding: 4px;
-    width: 80%;
-    height: 55%;
-    border: 1px solid transparent;
-    background-color: #e282975b;
-    margin-top: 7px;
-    font-size: 12pt;
-    box-shadow: 2px 2px #88888841;
-    
-}
-.btn_submit{
-    width: 80%;   
-    padding: 1.2%;
-    background-color: rgba(180, 64, 89, 0.78);
-    color: #FFFFFF;
-    font-family: Inter;
-    font-size: 1em;
-    font-weight: 700;
-    line-height: 100%;
-    letter-spacing: 0em;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 10px;
-    margin-top: 20px;
-    border: 1px solid transparent;
-    box-shadow: 1px 1px #88888841;
-}
-  
-
-
 
 
 @media (max-width: 850px) 
 {
   .contact_text{
+  /* margin-left: -7em; */
   width: 50%;
   height: auto;
+  
+
 }
 
 .container span {
@@ -118,10 +77,15 @@
 }
 .h3{
   inline-size: 90%;
-  overflow-wrap: break-word;
+    overflow-wrap: break-word;
+    
 }
  .contact_forms{
-  margin-top: 2em; 
+/*   
+  width: 100%; */
+  margin-top: 2em;
+  /* margin-left: 4em; */
+ 
 }
  
 
@@ -160,7 +124,7 @@
   margin-bottom: 1em;
 
 }
-.h3{
+  .h3{
   inline-size: 100%;
   overflow-wrap: break-word;
     
@@ -172,18 +136,6 @@
   margin-left: 3em;
  
 }
-.form{
-  
-  line-height:3;
-  width: 100%;
-  height: 35%;
-  }
-
-.btn_submit{
-    width: 81%;
-
-}
-
-
+ 
 }
 
