--- a/components/MVV/styles.module.css
+++ b/components/MVV/styles.module.css
@@ -1,7 +1,13 @@
 .container{
     width: 100%;
-    max-width: 1400px;
+    height: fit-content;
+    padding: 30px 0;
     margin: 0 auto;
+    background-color: #eeeeee;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .optionsContainer{
@@ -10,6 +16,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 30px;
+    max-width: 1400px;
 }
 
 .option{
@@ -89,6 +96,7 @@
 }
 
 .mvvContainer{
+    max-width: 1400px;
     min-height: 600px;
     gap: 20px;
     padding: 30px 0 0 0;
